<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin12"
    android:layout_marginVertical="@dimen/margin8"
    android:background="@drawable/card_border"
    android:padding="@dimen/margin16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iconView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:cardCornerRadius="@dimen/margin4"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin12"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconView"
        app:layout_constraintTop_toTopOf="@+id/iconView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/text16"
            android:textStyle="bold"
            tools:text="Sbi Cashback Credit dksb sdhjbj sdjbjsb djb s djs d jhhd card" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/greySubtitleColor"
            android:textSize="@dimen/text14"
            android:textStyle="normal"
            tools:text="kndk kdsnbksd jsdjj  jsdbjj dsjbjs  hfjdbh djbd hdjbd j jdj djsj sj djbjsjjs j djbfsj fd jfsdkjnsk s jsknsk  zxkisnjks d  ksd k d ks  ksn usi" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin2"
        android:layout_marginVertical="@dimen/margin16"
        android:background="@drawable/gradient_bg"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/featuresListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin12"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bodyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin12"
        app:cardBackgroundColor="@color/greyBackgroundColor"
        app:cardCornerRadius="@dimen/margin12"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/featuresListView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/feesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/annualFee"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text14"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/anualFee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text12"
                    tools:text="$8788" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@string/joiningFee"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text14"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/joiningFee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text12"
                        tools:text="$787" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyView">

        <androidx.cardview.widget.CardView
            android:id="@+id/earnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            app:cardBackgroundColor="@color/skyBlueBgColorActionRequired"
            app:cardCornerRadius="@dimen/margin8"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/earnUpto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin8"
                android:layout_marginVertical="@dimen/margin12"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:visibility="gone"
                android:textColor="@color/skyBlueTextColorActionRequired"
                android:textSize="@dimen/text16"
                android:textStyle="bold"
                tools:text="Earn Upto" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/spacer"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/earnView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/footerView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/margin8"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spacer"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin8"
                android:layout_marginVertical="@dimen/margin12"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin24"
                    android:layout_height="@dimen/margin24"
                    android:layout_marginStart="@dimen/margin4"
                    android:src="@drawable/ic_share_solid" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/shareText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin12"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text14" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
